# Wavvon-clients

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_SIGNING_POLICY.md  Cargo.toml  README.md  ROADMAP.md  cliff.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: auto-tag.yml  build.yml  deploy.yml  release-android.yml  release-desktop.yml  release-web.yml  release.yml
apps/android/: .gitattributes  .gitignore  Cargo.toml  README.md  SIGNING.md  cliff.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/android/src-tauri/: Cargo.toml  tauri.conf.json
apps/android/src-tauri/capabilities/: default.json
apps/android/src-tauri/src/: lib.rs  voice_cmd.rs
apps/desktop/: package.json  tsconfig.json  vite.config.ts
apps/web/: .gitignore  README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
crates/voice/: Cargo.toml
desktop/: package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/public/: pip.html
desktop/src/: App.tsx  constants.ts  main.tsx  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: admin.rs  admin_alliance.rs  auth_creds.rs  bots.rs  certs.rs  channels.rs  devices.rs  discovery.rs  dm.rs  events_polls.rs  farm.rs  games.rs  home_hub.rs  hub_session.rs  identity.rs  identity_cmd.rs  lib.rs  lobby.rs  local_store.rs  messages.rs  pairing.rs  prefs_blob.rs  screen_share.rs  state.rs  types.rs  updater.rs  voice_cmd.rs  ws.rs
i18n/: de.json  en.json  es.json  i18n.ts  it.json
scripts/: install-hooks.ps1  release.sh
utils/: audio.ts  hex.ts  package.json  recentEmoji.ts
voice/src/: capture.rs  codec.rs  denoise.rs  pipeline.rs  (+3 more)
web/: package-lock.json  package.json  tsconfig.json  vite.config.ts
(+959 files in other folders)
