[package]
name = "voxply-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "voxply_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tracing = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json", "multipart"] }
hex = "0.4"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
bip39 = "2"
curve25519-dalek = "4"
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
voxply-voice = { path = "../../voice" }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
dirs = "6"
url = "2"
mime_guess = "2"
xcap = "0.0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
