[package]
name = "wavvon-android"
version = "0.1.0"
edition = "2021"

[lib]
name = "wavvon_android_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
wavvon-voice = { path = "../../../crates/voice" }
tokio = { version = "1", features = ["full"] }
